# Server-SearchSolver

./: AStarSearcher.h  BFSSearcher.h  BestFirstSearcher.cpp  BestFirstSearcher.h  BestFirstSearcher1.h  CMakeLists.txt  CachManager.cpp  CachManager.h  CacheManager.cpp  CacheManager.h  ClientHandler.h  DFSSearcher.h  DataStrucForSearcher.h  FileCacheManager.cpp  FileCacheManager.h  Main.h  Matrix.cpp  Matrix.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MyPriorityQueue.h  MyPriortyQueue.h  MySerialServer.cpp  MySerialServer.h  README.md  Searchable.h  Searcher.h  SearcherAbstract.h  SearcherSolver.h  Server.cpp  Server.h  Solver.cpp  Solver.h  State.h  StringReverser.cpp  StringReverser.h  git_log.txt  main.cpp
AlgoResults/: 10Matrixes.txt  ASTARsoultion.txt  BFSsoultion.txt  Bestsoultion.txt  DFSsoultion.txt  check10.pdf.ods
Tester/: parallel_tester.py
